--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMLk0q6TEOSvCK7kxekfmtz",
+      "authorship_tag": "ABX9TyMY38pC9vxBpWzdSUgtGMUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +456,7 @@
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +489,7 @@
         "id": "w2qf355Rw6lx",
         "outputId": "c3329622-fe74-408c-98a9-1c2b38f3a69a"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
         "id": "vAxUvNhOjoOZ",
         "outputId": "69b78d67-4197-481c-c053-b711b11ef013"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +582,7 @@
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "3Ze94NW_zPJo"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
         "id": "qWoawq4o4l6v",
         "outputId": "a74e3d6d-c03f-4351-9693-8eea17b5fc7a"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -678,7 +678,7 @@
         "id": "e3hdrfwD-5uA",
         "outputId": "d940802a-8e61-49e8-d57e-6786c3d9192f"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +711,7 @@
       "metadata": {
         "id": "14BPsXpkMxlv"
       },
-      "execution_count": 123,
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -748,12 +748,12 @@
       ],
       "metadata": {
         "id": "QdJqwU6xNns3",
-        "outputId": "976d8035-2d5f-4732-bd12-561b0565cc10",
+        "outputId": "cbbed30d-cfc2-41c0-8d48-349f04d1bf6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 124,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 154
         }
       ]
     },
@@ -817,7 +817,7 @@
       "metadata": {
         "id": "EUSaUdGeQh0m"
       },
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -847,9 +847,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2vrLLyYjpcLN",
-        "outputId": "19a66d4c-f7b8-4aba-a321-50c6be4c7b48"
+        "outputId": "bb4ca305-5869-488e-a6c9-1ae48fc64f4c"
       },
-      "execution_count": null,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +859,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 127
         }
       ]
     },
@@ -893,9 +893,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLi48dqUtOr5",
-        "outputId": "affc09bb-3b97-4add-9014-3ba1c1670ae2"
+        "outputId": "f636aaa9-db39-44a3-92fd-b44f24e37695"
       },
-      "execution_count": null,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 128
         }
       ]
     },
@@ -922,17 +922,18 @@
       "cell_type": "code",
       "source": [
         "input08, height, width = read_grid(\"input08\")\n",
+        "dimensions = (height, width)\n",
         "antennas = {}\n",
         "for (name, pos) in [(input08[y][x], (y, x)) for y in range(height) for x in range(width) if input08[y][x] != '.']:\n",
         "  if name in antennas:\n",
         "    antennas[name].append(pos)\n",
         "  else:\n",
-        "    antennas[name] = [pos]\n"
+        "    antennas[name] = [pos]"
       ],
       "metadata": {
         "id": "u4F3xlexzshP"
       },
-      "execution_count": 96,
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -957,9 +958,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zbQL-Qxz31kl",
-        "outputId": "8133e30d-c497-435f-8fd1-43cda0a3401d"
+        "outputId": "099a9efb-b5ec-4bae-ba0e-5e3b27f6eaea"
       },
-      "execution_count": 97,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,7 +970,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 133
         }
       ]
     },
@@ -1003,9 +1004,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z24X9r_K8ZNk",
-        "outputId": "4b975a7d-3cf4-457c-db15-4fe2f20f9e0e"
+        "outputId": "50bedc8b-d067-4727-f77d-7ec975a5e693"
       },
-      "execution_count": 98,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1016,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 134
         }
       ]
     },
@@ -1038,7 +1039,7 @@
       "metadata": {
         "id": "zQHuKZYxD7Dx"
       },
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -1071,12 +1072,12 @@
       ],
       "metadata": {
         "id": "7nFewmeCEO-e",
-        "outputId": "1aea6223-beb5-45db-f5e0-8d3da2d2ed0f",
+        "outputId": "67decf89-bc90-44a3-d8fc-27181b983d19",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1087,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 152
         }
       ]
     },
@@ -1180,7 +1181,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": null,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -1195,7 +1196,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from functools import reduce\n",
         "def find_peaks(p, visited, peaks):\n",
         "  if not in_range(p, dimensions) \\\n",
         "    or get_cell(p, input10) == -1 \\\n",
@@ -1205,12 +1205,12 @@
         "  if get_cell(p, input10) == 9:\n",
         "    # print(visited + [p])\n",
         "    return peaks + [p]\n",
-        "  return reduce(lambda ps, d: find_peaks(vec_add(p, d), visited + [p], ps), dirs90, peaks)\n"
+        "  return reduce(lambda ps, d: find_peaks(vec_add(p, d), visited + [p], ps), dirs90, peaks)"
       ],
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -1232,9 +1232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lBaCaS6DZdpi",
-        "outputId": "61bb8bd7-d46f-4aa6-f3d4-861b89ba8c8c"
+        "outputId": "62bbfc0c-11ae-4c10-8eac-87fc3180986f"
       },
-      "execution_count": null,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1244,7 +1244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 144
         }
       ]
     },
@@ -1267,9 +1267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aVweMTquZsTf",
-        "outputId": "96956a65-3c11-4be6-a68f-5ae23d8385bf"
+        "outputId": "86565ccd-404a-4e2b-e5f4-b53d8fc649ad"
       },
-      "execution_count": null,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1279,7 +1279,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 145
         }
       ]
     },
@@ -1301,7 +1301,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 82,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -1351,13 +1351,13 @@
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 81,
+      "execution_count": 147,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 11, part 1, 25 itertions / part 2, 75 iterations"
+        "Day 11, part 1, 25 itertions"
       ],
       "metadata": {
         "id": "i0f5MqgtioxE"
@@ -1381,9 +1381,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
-        "outputId": "cdec1648-290b-44b7-90eb-eb8e1d45adcc"
+        "outputId": "761cb6a2-b587-4579-c624-917b3d6eb502"
       },
-      "execution_count": 83,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,6 +1400,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Day 11, part 2, 75 iterations"
+      ],
+      "metadata": {
+        "id": "rikI1ZcKroMc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO"
+      ],
+      "metadata": {
+        "id": "2fExLDqKrrWp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Day 12, input"
       ],
       "metadata": {
@@ -1409,16 +1429,15 @@
     {
       "cell_type": "code",
       "source": [
-        "grid, dimensions = read_lines(\"input12\")\n",
+        "input12, height, width = read_lines(\"input12\")\n",
         "# grid=['AAAA','BBCD','BBCC','EEEC']\n",
         "# grid=['OOOOO','OXOXO','OOOOO','OXOXO','OOOOO']\n",
-        "# dimensions=(len(grid), len(grid[0]))\n",
-        "width, height = dimensions"
+        "dimensions = (height, width)"
       ],
       "metadata": {
         "id": "aalsa-dy5ZvV"
       },
-      "execution_count": 92,
+      "execution_count": 149,
       "outputs": []
     },
     {
@@ -1454,20 +1473,20 @@
         "  collect(p)\n",
         "  return c, visited\n",
         "\n",
-        "regions = [region(p, grid) for p in [(y, x) for y in range(height) for x in range(width)] if not p in global_visited]\n",
+        "regions = [region(p, input12) for p in [(y, x) for y in range(height) for x in range(width)] if not p in global_visited]\n",
         "# print(regions)\n",
         "\n",
         "# len(r) = area of region r (consisting of all points for the region) with char c\n",
-        "sum(sum(perimeter(p, grid) for p in r) * len(r) for (c, r) in regions)\n"
+        "sum(sum(perimeter(p, input12) for p in r) * len(r) for (c, r) in regions)\n"
       ],
       "metadata": {
         "id": "bawcOtASR26A",
-        "outputId": "0b866107-cfba-4bb3-e7aa-a5e8aed2ba29",
+        "outputId": "afbc65b5-e2c8-43f5-8c69-38ca39fe2300",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 94,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1477,7 +1496,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 150
         }
       ]
     },
@@ -1492,7 +1511,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# TODO"
+      ],
       "metadata": {
         "id": "SWYo8L6xbrHt"
       },
