--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMY38pC9vxBpWzdSUgtGMUS",
+      "authorship_tag": "ABX9TyPur235cFCtC92GYVIUFh3S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -733,7 +733,7 @@
         "  while in_range(p, dimensions):\n",
         "    next = vec_add(p, dir)\n",
         "    if in_range(next, dimensions):\n",
-        "      if get_cell(next, input06) == '#':\n",
+        "      if get_cell(next, grid) == '#':\n",
         "        dir = turn_right[dir]\n",
         "      elif (next, dir) in visited:\n",
         "        return (visited, True)\n",
@@ -748,12 +748,12 @@
       ],
       "metadata": {
         "id": "QdJqwU6xNns3",
-        "outputId": "cbbed30d-cfc2-41c0-8d48-349f04d1bf6e",
+        "outputId": "de08551a-a66f-4661-e4b1-6827a29c8e1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 154,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 154
+          "execution_count": 158
         }
       ]
     },
@@ -792,10 +792,25 @@
         "loops"
       ],
       "metadata": {
-        "id": "vilThMk8kFpb"
+        "id": "vilThMk8kFpb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "189e2458-0d24-4f63-edbf-363577cd3868"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1562"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 159
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1210,7 +1225,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": 143,
+      "execution_count": 157,
       "outputs": []
     },
     {
@@ -1409,12 +1424,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO"
+        "# TODO - exponential growth, can't simulate, need to calculate"
       ],
       "metadata": {
         "id": "2fExLDqKrrWp"
       },
-      "execution_count": null,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -1429,7 +1444,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input12, height, width = read_lines(\"input12\")\n",
+        "input12, height, width = read_grid(\"input12\")\n",
         "# grid=['AAAA','BBCD','BBCC','EEEC']\n",
         "# grid=['OOOOO','OXOXO','OOOOO','OXOXO','OOOOO']\n",
         "dimensions = (height, width)"
@@ -1437,7 +1452,7 @@
       "metadata": {
         "id": "aalsa-dy5ZvV"
       },
-      "execution_count": 149,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -1481,12 +1496,12 @@
       ],
       "metadata": {
         "id": "bawcOtASR26A",
-        "outputId": "afbc65b5-e2c8-43f5-8c69-38ca39fe2300",
+        "outputId": "a486d677-d277-4c1f-f00f-7304435114c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 150,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,14 +1511,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 150
+          "execution_count": 163
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 12, part 2, areas * side count"
+        "Day 12, part 2, areas * side counts"
       ],
       "metadata": {
         "id": "6st_ex4XjnTo"
