day 11, part 2, and day 12, part 2

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPur235cFCtC92GYVIUFh3S",
+      "authorship_tag": "ABX9TyMCDtNKBiwTpzBRPbhvOfxS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -711,7 +711,7 @@
       "metadata": {
         "id": "14BPsXpkMxlv"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,7 +753,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +798,7 @@
         },
         "outputId": "189e2458-0d24-4f63-edbf-363577cd3868"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,7 +832,7 @@
       "metadata": {
         "id": "EUSaUdGeQh0m"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -864,7 +864,7 @@
         "id": "2vrLLyYjpcLN",
         "outputId": "bb4ca305-5869-488e-a6c9-1ae48fc64f4c"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +910,7 @@
         "id": "HLi48dqUtOr5",
         "outputId": "f636aaa9-db39-44a3-92fd-b44f24e37695"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
       "metadata": {
         "id": "u4F3xlexzshP"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -975,7 +975,7 @@
         "id": "zbQL-Qxz31kl",
         "outputId": "099a9efb-b5ec-4bae-ba0e-5e3b27f6eaea"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
         "id": "Z24X9r_K8ZNk",
         "outputId": "50bedc8b-d067-4727-f77d-7ec975a5e693"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,7 +1054,7 @@
       "metadata": {
         "id": "zQHuKZYxD7Dx"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1092,7 +1092,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1196,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1225,7 +1225,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1249,7 +1249,7 @@
         "id": "lBaCaS6DZdpi",
         "outputId": "62bbfc0c-11ae-4c10-8eac-87fc3180986f"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1284,7 +1284,7 @@
         "id": "aVweMTquZsTf",
         "outputId": "86565ccd-404a-4e2b-e5f4-b53d8fc649ad"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1316,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 146,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1344,29 +1344,13 @@
         "  #cache[s] = res\n",
         "  return res\n",
         "\n",
-        "cache = {}\n",
-        "cache_hits = []\n",
-        "iter = {}\n",
-        "def blink(line, iterations):\n",
-        "  iter[iterations] = iter[iterations] + 1 if iterations in iter else 1\n",
-        "  if iterations == 0:\n",
-        "    return line\n",
-        "  res = []\n",
-        "  for i in range(len(line)):\n",
-        "    key = (line[i], iterations)\n",
-        "    if key in cache:\n",
-        "      cache_hits.append(key)\n",
-        "      b = cache[key]\n",
-        "    else:\n",
-        "      b = blink(blink_single(line[i]), iterations - 1)\n",
-        "      cache[key] = b\n",
-        "    res += b\n",
-        "  return res"
+        "def iterate(stones):\n",
+        "  return reduce(lambda counter, stone: counter + Counter({new_stone: stones[s] * new_count for new_stone, new_count in Counter(blink_single(stone)).items()}), stones, Counter())"
       ],
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 147,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -1381,34 +1365,29 @@
     {
       "cell_type": "code",
       "source": [
-        "iter = {}\n",
-        "cache = {}\n",
-        "cache_hits = []\n",
-        "r = blink(input11, 25)\n",
-        "# print(r)\n",
-        "print(f'stones: {len(r)}')\n",
-        "print(f'blink() calls: {sum(i for i in iter.values())}, by iterations to go: {iter}')\n",
-        "print(f'cache entries: {len(cache)}, cache size (number of strings, regardless of length): {sum(len(v) for v in cache.values())}')\n",
-        "print(f'cache hits: {len(cache_hits)}, distinct: {len(set(cache_hits))}')"
+        "stones = Counter(input11)\n",
+        "for i in range(25):\n",
+        "  stones = blink(stones)\n",
+        "sum(stones.values())"
       ],
       "metadata": {
+        "id": "YG_vzRRXJrbX",
+        "outputId": "84754f4f-9b4f-4479-8402-09dfd6228413",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "fPMRBRvfds8G",
-        "outputId": "761cb6a2-b587-4579-c624-917b3d6eb502"
+        }
       },
-      "execution_count": 148,
+      "execution_count": 66,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "stones: 182081\n",
-            "blink() calls: 3645, by iterations to go: {25: 1, 24: 8, 23: 10, 22: 13, 21: 19, 20: 27, 19: 32, 18: 43, 17: 55, 16: 68, 15: 85, 14: 92, 13: 111, 12: 114, 11: 123, 10: 151, 9: 156, 8: 183, 7: 200, 6: 213, 5: 238, 4: 268, 3: 319, 2: 326, 1: 389, 0: 401}\n",
-            "cache entries: 3644, cache size (number of strings, regardless of length): 1493775\n",
-            "cache hits: 1533, distinct: 476\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "182081"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ]
     },
@@ -1424,12 +1403,41 @@
     {
       "cell_type": "code",
       "source": [
+        "stones = Counter(input11)\n",
+        "for i in range(75):\n",
+        "  stones = iterate(stones)\n",
+        "sum(stones.values())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fPMRBRvfds8G",
+        "outputId": "8c9a22ac-d655-4f7a-84b9-c7410d9149ab"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "216318908621637"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# TODO - exponential growth, can't simulate, need to calculate"
       ],
       "metadata": {
         "id": "2fExLDqKrrWp"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1445,20 +1453,22 @@
       "cell_type": "code",
       "source": [
         "input12, height, width = read_grid(\"input12\")\n",
-        "# grid=['AAAA','BBCD','BBCC','EEEC']\n",
-        "# grid=['OOOOO','OXOXO','OOOOO','OXOXO','OOOOO']\n",
+        "# input12=['AAAA','BBCD','BBCC','EEEC']\n",
+        "# input12=['OOOOO','OXOXO','OOOOO','OXOXO','OOOOO']\n",
+        "# height = len(input12)\n",
+        "# width = len(input12[0])\n",
         "dimensions = (height, width)"
       ],
       "metadata": {
         "id": "aalsa-dy5ZvV"
       },
-      "execution_count": 162,
+      "execution_count": 117,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 12, part 1, areas * perimeters"
+        "Day 12, regions"
       ],
       "metadata": {
         "id": "3kANSv14R0IL"
@@ -1467,18 +1477,14 @@
     {
       "cell_type": "code",
       "source": [
-        "def perimeter(p, grid):\n",
-        "  c = get_cell(p, grid)\n",
-        "  return sum(0 if in_range(vec_add(p, d), dimensions) and get_cell(vec_add(p, d), grid) == c else 1 for d in dirs90)\n",
-        "\n",
         "global_visited = set()\n",
         "\n",
-        "def region(p, grid):\n",
-        "  c = get_cell(p, grid)\n",
+        "def region(p):\n",
+        "  c = get_cell(p, input12)\n",
         "  visited = set()\n",
         "\n",
         "  def collect(p):\n",
-        "    if p in global_visited or p in visited or not in_range(p, dimensions) or get_cell(p, grid) != c:\n",
+        "    if p in global_visited or p in visited or not in_range(p, dimensions) or get_cell(p, input12) != c:\n",
         "      return\n",
         "    visited.add(p)\n",
         "    global_visited.add(p)\n",
@@ -1488,20 +1494,46 @@
         "  collect(p)\n",
         "  return c, visited\n",
         "\n",
-        "regions = [region(p, input12) for p in [(y, x) for y in range(height) for x in range(width)] if not p in global_visited]\n",
-        "# print(regions)\n",
+        "regions = [region(p) for p in [(y, x) for y in range(height) for x in range(width)] if not p in global_visited]\n",
         "\n",
         "# len(r) = area of region r (consisting of all points for the region) with char c\n",
-        "sum(sum(perimeter(p, input12) for p in r) * len(r) for (c, r) in regions)\n"
+        "# [(c, len(r)) for (c, r) in regions]"
       ],
       "metadata": {
         "id": "bawcOtASR26A",
-        "outputId": "a486d677-d277-4c1f-f00f-7304435114c6",
+        "collapsed": true
+      },
+      "execution_count": 122,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 12, part 1, areas * perimeters"
+      ],
+      "metadata": {
+        "id": "Dw_-I5nVLbpH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def perimeter(p):\n",
+        "  c = get_cell(p, input12)\n",
+        "  return sum(0 if in_range(vec_add(p, d), dimensions) and get_cell(vec_add(p, d), input12) == c else 1 for d in dirs90)\n",
+        "\n",
+        "# [(c, len(r), sum(perimeter(p, input12) for p in r)) for (c, r) in regions]\n",
+        "\n",
+        "sum(sum(perimeter(p) for p in r) * len(r) for (c, r) in regions)"
+      ],
+      "metadata": {
+        "id": "W-Ha-UH3LgzS",
+        "outputId": "0f9e3236-139e-404a-852d-d2a390f97ebd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 163,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1511,7 +1543,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 163
+          "execution_count": 124
         }
       ]
     },
@@ -1527,10 +1559,81 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO"
+        "def side_count(region):\n",
+        "  c, r = region\n",
+        "  min_y = min(y for (y, x) in r)\n",
+        "  max_y = max(y for (y, x) in r)\n",
+        "  min_x = min(x for (y, x) in r)\n",
+        "  max_x = max(x for (y, x) in r)\n",
+        "\n",
+        "  sc = 0\n",
+        "  # horizontal\n",
+        "  for y in range(min_y, max_y+1):\n",
+        "    cur_top = -1\n",
+        "    cur_bottom = -1\n",
+        "    for x in range(min_x, max_x+1):\n",
+        "      if (y, x) in r and (not in_range((y-1,x), dimensions) or get_cell((y-1, x), input12) != c):\n",
+        "        if cur_top != y:\n",
+        "          cur_top = y\n",
+        "          sc += 1\n",
+        "      else:\n",
+        "        cur_top = -1\n",
+        "      if (y, x) in r and (not in_range((y+1,x), dimensions) or get_cell((y+1, x), input12) != c):\n",
+        "        if cur_bottom != y:\n",
+        "          cur_bottom = y\n",
+        "          sc += 1\n",
+        "      else:\n",
+        "        cur_bottom = -1\n",
+        "      # print(y, x, sc)\n",
+        "  # vertical\n",
+        "  for x in range(min_x, max_x+1):\n",
+        "    cur_left = -1\n",
+        "    cur_right = -1\n",
+        "    for y in range(min_y, max_y+1):\n",
+        "      if (y, x) in r and (not in_range((y,x-1), dimensions) or get_cell((y, x-1), input12) != c):\n",
+        "        if cur_left != x:\n",
+        "          cur_left = x\n",
+        "          sc += 1\n",
+        "      else:\n",
+        "        cur_left = -1\n",
+        "      if (y, x) in r and (not in_range((y,x+1), dimensions) or get_cell((y, x+1), input12) != c):\n",
+        "        if cur_right != x:\n",
+        "          cur_right = x\n",
+        "          sc += 1\n",
+        "      else:\n",
+        "        cur_right = -1\n",
+        "      # print(y, x, sc)\n",
+        "  return sc\n",
+        "\n",
+        "# [(c, len(r), side_count((c, r), input12)) for (c, r) in regions]\n",
+        "sum(len(r) * side_count((c, r)) for (c, r) in regions)"
       ],
       "metadata": {
-        "id": "SWYo8L6xbrHt"
+        "id": "SWYo8L6xbrHt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "81b94841-1ad0-448a-b940-5919b5e53fed"
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "893676"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "usSWJbLkScCR"
       },
       "execution_count": null,
       "outputs": []
