--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMCDtNKBiwTpzBRPbhvOfxS",
+      "authorship_tag": "ABX9TyPcRku1OrruDTmcEHx6L9Ei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,7 @@
         "from collections import Counter\n",
         "from functools import reduce\n",
         "from itertools import groupby, islice, takewhile\n",
+        "import re\n",
         "\n",
         "def vec_add(v1, v2):\n",
         "  return tuple(sum(i) for i in zip(v1, v2))\n",
@@ -85,7 +86,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 59,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -1371,11 +1372,11 @@
         "sum(stones.values())"
       ],
       "metadata": {
-        "id": "YG_vzRRXJrbX",
-        "outputId": "84754f4f-9b4f-4479-8402-09dfd6228413",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YG_vzRRXJrbX",
+        "outputId": "84754f4f-9b4f-4479-8402-09dfd6228413"
       },
       "execution_count": 66,
       "outputs": [
@@ -1527,11 +1528,11 @@
         "sum(sum(perimeter(p) for p in r) * len(r) for (c, r) in regions)"
       ],
       "metadata": {
-        "id": "W-Ha-UH3LgzS",
-        "outputId": "0f9e3236-139e-404a-852d-d2a390f97ebd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W-Ha-UH3LgzS",
+        "outputId": "0f9e3236-139e-404a-852d-d2a390f97ebd"
       },
       "execution_count": 124,
       "outputs": [
@@ -1561,10 +1562,10 @@
       "source": [
         "def side_count(region):\n",
         "  c, r = region\n",
-        "  min_y = min(y for (y, x) in r)\n",
-        "  max_y = max(y for (y, x) in r)\n",
         "  min_x = min(x for (y, x) in r)\n",
+        "  min_y = min(y for (y, x) in r)\n",
         "  max_x = max(x for (y, x) in r)\n",
+        "  max_y = max(y for (y, x) in r)\n",
         "\n",
         "  sc = 0\n",
         "  # horizontal\n",
@@ -1572,13 +1573,13 @@
         "    cur_top = -1\n",
         "    cur_bottom = -1\n",
         "    for x in range(min_x, max_x+1):\n",
-        "      if (y, x) in r and (not in_range((y-1,x), dimensions) or get_cell((y-1, x), input12) != c):\n",
+        "      if (y, x) in r and (not in_range((y-1, x), dimensions) or get_cell((y-1, x), input12) != c):\n",
         "        if cur_top != y:\n",
         "          cur_top = y\n",
         "          sc += 1\n",
         "      else:\n",
         "        cur_top = -1\n",
-        "      if (y, x) in r and (not in_range((y+1,x), dimensions) or get_cell((y+1, x), input12) != c):\n",
+        "      if (y, x) in r and (not in_range((y+1, x), dimensions) or get_cell((y+1, x), input12) != c):\n",
         "        if cur_bottom != y:\n",
         "          cur_bottom = y\n",
         "          sc += 1\n",
@@ -1590,13 +1591,13 @@
         "    cur_left = -1\n",
         "    cur_right = -1\n",
         "    for y in range(min_y, max_y+1):\n",
-        "      if (y, x) in r and (not in_range((y,x-1), dimensions) or get_cell((y, x-1), input12) != c):\n",
+        "      if (y, x) in r and (not in_range((y, x-1), dimensions) or get_cell((y, x-1), input12) != c):\n",
         "        if cur_left != x:\n",
         "          cur_left = x\n",
         "          sc += 1\n",
         "      else:\n",
         "        cur_left = -1\n",
-        "      if (y, x) in r and (not in_range((y,x+1), dimensions) or get_cell((y, x+1), input12) != c):\n",
+        "      if (y, x) in r and (not in_range((y, x+1), dimensions) or get_cell((y, x+1), input12) != c):\n",
         "        if cur_right != x:\n",
         "          cur_right = x\n",
         "          sc += 1\n",
@@ -1613,9 +1614,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81b94841-1ad0-448a-b940-5919b5e53fed"
+        "outputId": "16eb93ce-451e-4b0e-f42b-487c35a6caea"
       },
-      "execution_count": 128,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1625,18 +1626,92 @@
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 220
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Day 13, input"
+      ],
+      "metadata": {
+        "id": "-FpUaEsBXY3X"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "xy = re.compile('.*?: X=?([+-]?\\d+), Y=?([+-]?\\d+)')\n",
+        "# machines(button A delta, button B delta, prize pos)\n",
+        "machines = [[tuple([int(s) for s in xy.match(definition).groups()]) for definition in line.split('\\n')] for line in \"\".join([line for line in open(f'drive/MyDrive/AoC/2024/input13.txt')]).split('\\n\\n')]\n"
+      ],
       "metadata": {
         "id": "usSWJbLkScCR"
       },
-      "execution_count": null,
+      "execution_count": 214,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 13, part 1, min costs"
+      ],
+      "metadata": {
+        "id": "fexRrWaHhmLW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def min_cost(machine):\n",
+        "  (ax, ay), (bx, by), (px, py) = machine\n",
+        "\n",
+        "  # try x combinations to reach price x\n",
+        "  x_max_a = int(px/ax)\n",
+        "  x_max_b = int(px/bx)\n",
+        "\n",
+        "  # if ax/bx < 3 go for low a, higher b, if ax/bx > 3 go for low b, higher a\n",
+        "  x = [(a, int((px - a * ax) / bx), int(3 * a + (px - a * ax) / bx)) for a in range(x_max_a + 1) if (px - a * ax) % bx == 0] \\\n",
+        "  if ax/bx < 3 else \\\n",
+        "  [(int((px - b * bx) / ax), b, int(3 * (px - b * bx) / ax + b)) for b in range(x_max_b + 1) if (px - b * bx) % ax == 0]\n",
+        "  # print('x:', x)\n",
+        "\n",
+        "  # try y combinations to reach price y\n",
+        "  y_max_a = int(py/ay)\n",
+        "  y_max_b = int(py/by)\n",
+        "\n",
+        "  # if ay/by < 3 go for low a, higher b\n",
+        "  y = [(a, int((py - a * ay) / by), int(3 * a + (py - a * ay) / by)) for a in range(y_max_a + 1) if (py - a * ay) % by == 0] \\\n",
+        "  if ay/by < 3 else \\\n",
+        "  [(int((py - b * by) / ay), b, int(3 * (py - b * by) / ay + b)) for b in range(y_max_b + 1) if (py - b * by) % ay == 0]\n",
+        "  # print('y:', y)\n",
+        "\n",
+        "  intersection = [c for c in x if c in y]\n",
+        "  return min([cost for _, _, cost in intersection]) if intersection else 0\n",
+        "\n",
+        "sum(min_cost(machine) or 0 for machine in machines)"
+      ],
+      "metadata": {
+        "id": "V2QXoTsKhlHD",
+        "outputId": "57b78db4-823f-4c30-e607-1c7ceccca4ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 221,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "39996"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 221
+        }
+      ]
     }
   ]
 }
